@@ -31,7 +31,9 @@ public class RequestAttendDto {
     private UserDto assignedTo;
     private List<HistoryRequestDto> historyRequests;
 
-    public RequestAttendDto(RequestAttendEntity entity){
+    private NotificationDto notification;
+
+    public RequestAttendDto(RequestAttendEntity entity) {
         List<Object> fileUrlsObj = new JSONObject(entity.getFiles()).getJSONArray("files").toList();
         List<String> fileUrls = new ArrayList<>();
         for(Object obj : fileUrlsObj){
@@ -46,8 +48,34 @@ public class RequestAttendDto {
         this.files = fileUrls;
         this.createdBy = UserDto.toDto(entity.getCreateBy());
         this.assignedTo = UserDto.toDto(entity.getAssignTo());
-        this.historyRequests = entity.getHistoryRequestEntities().stream().map(HistoryRequestDto::toDto)
-                .collect(Collectors.toList());
+    }
+
+    public static RequestAttendDto entityToDto(RequestAttendEntity entity, NotificationDto notificationDto){
+        List<Object> s3UrlsObj = new JSONObject(entity.getFiles()).getJSONArray("files").toList();
+        List<String> s3Urls = new ArrayList<>();
+        for(Object s3Url : s3UrlsObj){
+            s3Urls.add(s3Url.toString());
+        }
+        List<HistoryRequestEntity> historyRequestEntities = entity.getHistoryRequestEntities();
+        List<HistoryRequestDto> historyRequestDtos = new ArrayList<>();
+        if(historyRequestEntities != null){
+            historyRequestDtos = historyRequestEntities.stream()
+                    .map(HistoryRequestDto::toDto).collect(Collectors.toList());
+        }
+
+        return RequestAttendDto.builder()
+                .id(entity.getId())
+                .timeCheckIn(entity.getTimeCheckIn())
+                .timeCheckOut(entity.getTimeCheckOut())
+                .dateRequestAttend(entity.getDateRequestAttend())
+                .status(entity.getStatus())
+                .reasonCancel(entity.getReasonCancel())
+                .files(s3Urls)
+                .createdBy(UserDto.toDto(entity.getCreateBy()))
+                .assignedTo(UserDto.toDto(entity.getAssignTo()))
+                .historyRequests(historyRequestDtos)
+                .notification(notificationDto)
+                .build();
     }
     public static RequestAttendDto entityToDto(RequestAttendEntity entity){
         List<Object> s3UrlsObj = new JSONObject(entity.getFiles()).getJSONArray("files").toList();
@@ -61,6 +89,7 @@ public class RequestAttendDto {
             historyRequestDtos = historyRequestEntities.stream()
                     .map(HistoryRequestDto::toDto).collect(Collectors.toList());
         }
+
         return RequestAttendDto.builder()
                 .id(entity.getId())
                 .timeCheckIn(entity.getTimeCheckIn())
